--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "prefer-stable": true,
-
+    
     "extra": {
         "patches": {
             "enable-patching" : true,
             "drupal/domain": {
-                "Domain config UI": "https://www.drupal.org/files/issues/domain_config_ui-2829614-3.patch"
+                "Domain config UI": "https://www.drupal.org/files/issues/domain_config_ui-2829614-3.patch",
+                "Domain config": "https://www.drupal.org/files/issues/issue_creating_user_with_behat-2842785-11863387.patch"
             }
         }
     },
@@ -18,7 +19,8 @@
     "require": {
         "drupal/token_filter": "1.0.0-beta1",
         "drupal/config_token": "1.x-dev#ee626183c4b75b901a9edb63c1e614516e9c3ba6",
-        "drupal/domain": "1.0.0-alpha6",
-        "drupal/paragraphs": "^1.0"
+        "drupal/domain": "1.x-dev#5e3a4f17735eb34e4e4c21748caf1f238e0c2ecfv",
+        "drupal/paragraphs": "^1.0",
+        "dennisdigital/domain_path": "26684_setup_aliases-dev"
     }
 }
