--- a/composer.json
+++ b/composer.json
@@ -6,23 +6,32 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
 
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:dennisinteractive/google_tag.git"
+        }
+    ],
+
     "extra": {
         "patches": {
-            "enable-patching" : true,
             "drupal/domain": {
                 "Domain config UI": "https://www.drupal.org/files/issues/domain_config_ui-2829614-3.patch"
-            },
-            "drupal/google_tag": {
-                "Check empty file": "https://www.drupal.org/files/issues/brackets_in_the_head-2845243-2.patch"
-            }          
+            }
         }
     },
+
+    "comment": "Vendor solotandem should be changed to drupal once this is fixed: https://www.drupal.org/node/2845873#comment-11881117",
 
     "require": {
         "drupal/token_filter": "1.0.0-beta1",
         "drupal/config_token": "1.x-dev#ee626183c4b75b901a9edb63c1e614516e9c3ba6",
         "drupal/domain": "1.0.0-alpha6",
         "drupal/paragraphs": "^1.0",
-        "drupal/google_tag": "1.x-dev#f1070d51ba4b37afd70b0d8efbf138099061f79b"
+        "solotandem/google_tag": "dev-dennis-8.x-1.x#66c4b40247dfcbc895cc544f62ca9a8be9fcc6f9"
     }
 }
