--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "enable-patching" : true,
             "drupal/domain": {
                 "Domain config UI": "https://www.drupal.org/files/issues/domain_config_ui-2829614-3.patch",
-                "Domain config": "https://www.drupal.org/files/issues/issue_creating_user_with_behat-2842785-11863387.patch"
+                "Issue creating user with Behat": "https://www.drupal.org/files/issues/issue_creating_user_with_behat-2842785-11863387.patch"
             }
         }
     },
