changed source vcs not .git

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         },
         {
             "type": "vcs",
-            "url": "git@github.com:dennisinteractive/google_tag.git"
+            "url": "https://github.com/dennisinteractive/google_tag"
         }
     ],
 
