--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
             "type": "vcs",
             "url": "git@github.com:dennisinteractive/google_tag.git"
         },
+				{
+						"type": "vcs",
+						"url": "git@github.com:dennisinteractive/domain.git",
+						"no-api": true
+				},
         {
             "type": "vcs",
             "url": "git@github.com:dennisinteractive/domain_path.git",
@@ -22,22 +27,12 @@
         }
     ],
 
-    "extra": {
-        "patches": {
-            "enable-patching" : true,
-            "drupal/domain": {
-                "Domain config UI": "https://www.drupal.org/files/issues/domain_config_ui-2829614-3.patch",
-                "Issue creating user with Behat": "https://www.drupal.org/files/issues/issue_creating_user_with_behat-2842785-11863387.patch"
-            }
-        }
-    },
-
     "comment": "Vendor solotandem should be changed to drupal once this is fixed: https://www.drupal.org/node/2845873#comment-11881117",
 
     "require": {
         "drupal/token_filter": "1.0.0-beta1",
         "drupal/config_token": "1.x-dev#ee626183c4b75b901a9edb63c1e614516e9c3ba6",
-        "drupal/domain": "1.x-dev#59a4f59bce12d65c5d73241cb659e4cbe8fb0f35",
+        "drupal/domain": "dev-config_ui_alpha6",
         "drupal/paragraphs": "^1.0",
         "drupal/domain_path": "26684_setup_aliases-dev",
         "solotandem/google_tag": "dev-dennis-8.x-1.x#66c4b40247dfcbc895cc544f62ca9a8be9fcc6f9"
