--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
         },
         {
             "type": "vcs",
+            "url": "git@github.com:dennisinteractive/domain_xmlsitemap.git",
+            "no-api": true
+        },
+        {
+            "type": "vcs",
             "url": "git@github.com:dennisinteractive/google_tag.git",
             "no-api": true
         }
@@ -24,6 +29,7 @@
         "drupal/token_filter": "1.0.0-beta1",
         "drupal/config_token": "1.x-dev#ee626183c4b75b901a9edb63c1e614516e9c3ba6",
         "drupal/domain": "1.0.0-alpha6",
+        "drupal/domain_xmlsitemap": "1.*",
         "drupal/paragraphs": "^1.0",
         "solotandem/google_tag": "dev-dennis-8.x-1.x#200e3ac4dc5b18be3c4497f11aaa64bb45fe96f8"
     }
