--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "drupal/config_token": "1.x-dev#ee626183c4b75b901a9edb63c1e614516e9c3ba6",
         "drupal/domain": "dev-dennis-8.x-1.x",
         "drupal/paragraphs": "^1.0",
-        "drupal/domain_path": "dev-8.x-1.x",
+        "drupal/domain_path": "~1.0.0",
         "solotandem/google_tag": "dev-dennis-8.x-1.x#2b0d1ccd45919dbb7f535680a6756917df47f828"
     }
 }
