--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,11 @@
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         },
-        {
-            "type": "vcs",
-            "url": "git@github.com:dennisinteractive/google_tag.git"
+        { 
+            "type": "composer", "url": "https://repo.packagist.com/dennisdigital/"
         },
         {
-          "type": "vcs",
-          "url": "git@github.com:dennisinteractive/domain.git"
-        },
-        {
-          "type": "vcs",
-          "url": "git@github.com:dennisinteractive/domain_path.git"
+            "packagist.org": false
         }
     ],
 
