Case 27312; vcs for domain_xmlsitemap as it is a "clone" of a drupal module

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
             "type": "composer", "url": "https://repo.packagist.com/dennisdigital/"
         },
         {
+            "type": "vcs",
+            "url": "git@github.com:dennisinteractive/domain_xmlsitemap.git"
+        },
+        {
             "packagist.org": false
         }
     ],
