--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 
     "require": {
         "drupal/token_filter": "1.0.0-beta1",
-        "drupal/config_token": "1.x-dev#ee626183c4b75b901a9edb63c1e614516e9c3ba6",
+        "drupal/config_token": "^1.0",
         "drupal/domain_xmlsitemap": "^1.0.0",
         "drupal/domain": "dev-dennis-8.x-1.x",
         "drupal/paragraphs": "^1.0",
