--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "drupal/token_filter": "1.0.0-beta1",
         "drupal/config_token": "~1.1.0",
         "drupal/domain_xmlsitemap": "~1.0.0",
-        "drupal/domain": "~1.0.0",
+        "drupal/domain": "1.0.0-alpha8",
         "drupal/paragraphs": "~1.1.0",
         "drupal/domain_path": "~1.0.0"
     }
