Update and pin domain back to patched version

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         "drupal/token_filter": "1.0.0-beta1",
         "drupal/config_token": "~1.1.0",
         "drupal/domain_xmlsitemap": "~1.0.0",
-        "drupal/domain": "1.0.0-alpha8",
+        "drupal/domain": "dev-8.x.1.0-alpha13-patched",
         "drupal/paragraphs": "~1.6.0",
-        "drupal/domain_path": "~1.0.0"
+        "drupal/domain_path": "1.0.0"
     }
 }
